# docs/http-gateway.openapi.json
@@ -17,6 +17,95 @@
     "application/json"
   ],
   "paths": {
+    "/api/v1/auth/sign-in": {
+      "post": {
+        "summary": "sign in",
+        "operationId": "GuardPanelService_SignIn",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1AuthTokensResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/v1SignInRequest"
+            }
+          }
+        ],
+        "tags": [
+          "auth"
+        ]
+      }
+    },
+    "/api/v1/auth/sign-up": {
+      "post": {
+        "summary": "first sign up (set password)",
+        "operationId": "GuardPanelService_SignUp",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1AuthTokensResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/v1SignUpRequest"
+            }
+          }
+        ],
+        "tags": [
+          "auth"
+        ]
+      }
+    },
+    "/api/v1/auth/whoami": {
+      "get": {
+        "summary": "current user profile",
+        "operationId": "GuardPanelService_WhoAmI",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1WhoAmIResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "tags": [
+          "auth"
+        ]
+      }
+    },
     "/api/v1/comments": {
       "post": {
         "summary": "create comment",
@@ -945,6 +1034,18 @@
         }
       }
     },
+    "v1AuthTokensResponse": {
+      "type": "object",
+      "properties": {
+        "accessToken": {
+          "type": "string"
+        },
+        "expiresAt": {
+          "type": "string",
+          "format": "date-time"
+        }
+      }
+    },
     "v1CreateCommentRequest": {
       "type": "object",
       "properties": {
@@ -1246,6 +1347,38 @@
         }
       }
     },
+    "v1SignInRequest": {
+      "type": "object",
+      "properties": {
+        "employeeId": {
+          "type": "string",
+          "format": "int64"
+        },
+        "password": {
+          "type": "string"
+        }
+      },
+      "required": [
+        "employeeId",
+        "password"
+      ]
+    },
+    "v1SignUpRequest": {
+      "type": "object",
+      "properties": {
+        "employeeId": {
+          "type": "string",
+          "format": "int64"
+        },
+        "password": {
+          "type": "string"
+        }
+      },
+      "required": [
+        "employeeId",
+        "password"
+      ]
+    },
     "v1Sorting": {
       "type": "object",
       "properties": {
@@ -1360,6 +1493,21 @@
         "CLIENT"
       ],
       "default": "VIOLATOR_TYPE_UNSPECIFIED"
+    },
+    "v1WhoAmIResponse": {
+      "type": "object",
+      "properties": {
+        "employeeId": {
+          "type": "string",
+          "format": "int64"
+        },
+        "fullName": {
+          "type": "string"
+        },
+        "position": {
+          "$ref": "#/definitions/v1EmployeePosition"
+        }
+      }
     }
   }
 }
